@@ -11,6 +11,7 @@ import org.apache.camel.component.as2.api.AS2MessageStructure;
 import org.apache.camel.component.as2.api.AS2SignatureAlgorithm;
 import org.apache.camel.component.as2.api.entity.DispositionNotificationMultipartReportEntity;
 import org.apache.camel.http.common.HttpMessage;
+import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -49,7 +50,7 @@ public class LocalhostStubAS2ClientRouteBuilder extends RouteBuilder {
     private Integer as2ServerPortNumber;
 
     private static org.apache.http.entity.ContentType contentType =
-            org.apache.http.entity.ContentType.create("application/edifact", (Charset) null);
+            org.apache.http.entity.ContentType.create("application/edifact", "utf-8");
 
     @Override
     public void configure() throws Exception {
@@ -57,12 +58,9 @@ public class LocalhostStubAS2ClientRouteBuilder extends RouteBuilder {
         from("jetty:http://localhost:3503/link")
                 .routeId("as2ClientLocalhost")
                 .process(new Processor() {
-
                     @Override
                     public void process(Exchange exchange) throws Exception {
                         String messageIn = exchange.getIn().getBody(String.class);
-                        System.out.println("Request Body Message: " + messageIn);
-
                         if (exchange.getIn() instanceof HttpMessage) {
                             HttpMessage httpMessage =
                                     (HttpMessage) exchange.getIn();
@@ -79,19 +77,18 @@ public class LocalhostStubAS2ClientRouteBuilder extends RouteBuilder {
                         }
 
                         exchange.getIn().reset();
-
                         exchange.getIn().setBody("Sample_EDI");
-
+                        exchange.getIn().setBody("for test sample EDI");
                         // enriching
-                        exchange.getIn().setHeader("CamelAS2.as2To", "DKtestAS2");
-                        exchange.getIn().setHeader("CamelAS2.as2From", "DKcompanyAS2");
+                        exchange.getIn().setHeader("CamelAS2.as2To", "CompanyA");
+                        exchange.getIn().setHeader("CamelAS2.as2From", "CompanyB");
 
                         exchange.getIn().setHeader("CamelAS2.as2Version", as2Version);
                         exchange.getIn().setHeader("CamelAS2.ediMessageContentType", contentType);
                         exchange.getIn().setHeader("CamelAS2.server", "DK AS2Client Localhost");
                         exchange.getIn().setHeader("CamelAS2.subject", "testDK");
                         exchange.getIn().setHeader("CamelAS2.from", "DKEdi");
-                        exchange.getIn().setHeader("CamelAS2.dispositionNotificationTo", "dk2k@mail.ru");
+                        exchange.getIn().setHeader("CamelAS2.dispositionNotificationTo", "cms4317@naver.com");
                         exchange.getIn().setHeader("CamelAS2.requestUri", as2RequestUri);
 
                         if (NEED_SIGNED_ENCRYPTED) {
@@ -106,7 +103,6 @@ public class LocalhostStubAS2ClientRouteBuilder extends RouteBuilder {
                         else {
                             exchange.getIn().setHeader("CamelAS2.as2MessageStructure", AS2MessageStructure.PLAIN);
                         }
-
                     }
                 })
                 .to("as2://client/send?targetHostName=localhost" +
@@ -120,7 +116,6 @@ public class LocalhostStubAS2ClientRouteBuilder extends RouteBuilder {
                     @Override
                     public void process(Exchange exchange) throws Exception {
                         if (exchange.getIn() != null) {
-
                             try {
                                 String messageIn = exchange.getIn().getBody(String.class);
                                 System.out.println("+++++++++++++++++++++++++++++++++++++++++++++++++++");
@@ -145,7 +140,8 @@ public class LocalhostStubAS2ClientRouteBuilder extends RouteBuilder {
             try {
                 InputStream inputStream = dispositionNotificationMultipartReportEntity.getContent();
 
-                ByteArrayDataSource datasource = new ByteArrayDataSource(inputStream.readAllBytes(), "multipart/report");
+                byte[] bytess = IOUtils.toByteArray(inputStream);
+                ByteArrayDataSource datasource = new ByteArrayDataSource(bytess, "multipart/report");
                 MimeMultipart multipart = new MimeMultipart(datasource);
 
                 int count = multipart.getCount();
@@ -160,9 +156,7 @@ public class LocalhostStubAS2ClientRouteBuilder extends RouteBuilder {
                             Header header = headerEnumeration.nextElement();
                             System.out.println(header.getName() + ": " + header.getValue());
                         }
-                        System.out.println("----");
                         System.out.println(bodyPart.getContent());
-                        System.out.println("----");
                         //processTextData(bodyPart.getContent());
                     } else if (bodyPart.isMimeType("application/octet-stream")) {
                         log.info("application/octet-stream");
@@ -183,9 +177,7 @@ public class LocalhostStubAS2ClientRouteBuilder extends RouteBuilder {
                             byte[] bytes = new byte[n];
                             byteArrayInputStream.read(bytes, 0, n);
                             String s = new String(bytes, StandardCharsets.UTF_8);
-                            System.out.println("----");
                             System.out.println(new String(bytes));
-                            System.out.println("----");
                         }
                     } else {
                         System.out.println(bodyPart.getContent().getClass());
